# KitsuneLib

./: CMakeLists.txt
src/Common/TypeDef/: TypeDef.h
src/Random/: Random.cpp  Random.h
src/String/: KString.cpp  KString.h  StringUtil.cpp  StringUtil.h  kstring.cpp  kstring.h
src/Time/: DateFormat.cpp  DateFormat.h  include
src/WinProcess/: WinProcess.cpp  WinProcess.h  include
src/WinUtils/: WinAdmin.cpp  WinAdmin.h  WinProcess.h  include
src/Windows/: WinProcess.cpp  WinProcess.h
